Fixes #108. Adding some CSS to wrap long text in the datatables. There seem to be a few other ways that you can specify the exact lengths for each column but I wasn't able to get this working. We will probably have to revisit that once we get some visual design feedback.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -42,3 +42,13 @@
 {
   border-top: thin solid #000000;
 }
+
+/* For word wrapping in the table */
+#snops
+{
+  table-layout: fixed;
+}
+
+#snops td {
+  word-wrap: break-word;
+}
